--- a/PIM/PIM.Web/Views/Shared/_CustomLayout.cshtml
+++ b/PIM/PIM.Web/Views/Shared/_CustomLayout.cshtml
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Project Information Management</title>
+    <title>@PIM.Web.Resources.Resource.ProjectInformationManagement</title>
 
 
     @Styles.Render("~/Content/bootstrap-sandstone.css")
@@ -26,13 +26,14 @@
     <div class="container-fluid">
         <div id="header" class="row">
             <span><img src="~/Resources/elca-logo-300.png" alt="logo" align="left" width="40" height="40"></span>
-            <h4>Project Information Management</h4>
+            <h4>@PIM.Web.Resources.Resource.ProjectInformationManagement</h4>
+           
         </div>
         <div id="content" class="row">
             <div id="column1" class="col-md-2">
                 <ul>
-                    <li><h4><a href="/Projects/">Project List</a></h4></li>
-                    <li><a href="/Projects/ProjectDetails/">New Project</a></li>
+                    <li><h4><a href="/Projects/">@PIM.Web.Resources.Resource.ProjectList</a></h4></li>
+                    <li><a href="/Projects/ProjectDetails/">@PIM.Web.Resources.Resource.NewProject</a></li>
                 </ul>
             </div>
             <div id="column2" class="col-md-10">
