--- a/PIM/PIM.Web/Content/Custom.css
+++ b/PIM/PIM.Web/Content/Custom.css
@@ -58,7 +58,7 @@ li {
 #searchView {
     display: inline-block;
     max-width: 800px;
-    padding: 20px 0px 30px 0px;
+    padding: 20px 0 30px 0;
     display: flex;
     justify-content: space-between;
    
@@ -124,4 +124,10 @@ li {
 }
 .glyphicon {
     float: right;
+}
+.align-center {
+    text-align: center;
+}
+.align-right {
+    text-align: right;
 }
